Add game settings for slow motion and auto-shoot; update power-up probabilities and timers

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <div id="uiContainer">
     <div id="score">Score: 0</div>
     <div id="highScore">High Score: 0</div>
+    <div id="gameSettings">
+        <label>
+            <input type="checkbox" id="slowMotionEnabled" checked>
+            Enable Slow Motion Powerup
+        </label>
+        <label>
+            <input type="checkbox" id="autoShootEnabled" checked>
+            Auto-Shoot (No Click Required)
+        </label>
+    </div>
     <div id="powerupTimers">
         <div>Shield: <span id="shieldTimer">0</span>s</div>
         <div>Triple Shot: <span id="tripleShotTimer">0</span>s</div>
